오픈그라피 수정

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- og -->
-    <meta property="og:type" content="website" /><meta
-    property="og:url"
-    content="https://hyejineeeeee.github.io/portfolio/"
-  />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://hyejineeeeee.github.io/portfolio/"
+    />
     <meta property="og:title" content="portfolio" />
-    <meta property="og:image" content="" />
+    <meta
+      property="og:image"
+      content="https://hyejineeeeee.github.io/portfolio/OGType.jpg"
+    />
     <meta
       property="og:description"
       content="생기를 불어넣는 디자이너 이혜진입니다."
