오픈그래피 수정222

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="portfolio" />
     <meta
       property="og:image"
-      content="https://hyejineeeeee.github.io/portfolio/OGType.jpg"
+      content="https://hyejineeeeee.github.io/portfolio/common/images/OGType.jpg"
     />
     <meta
       property="og:description"
