--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
     <!-- jQuery-->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/jquery-migrate-3.4.0.min.js"></script>
+    <script src="
+https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
+"></script>
+
+    <!-- <script src="https://code.jquery.com/jquery-migrate-3.4.0.min.js"></script> -->
     <!-- js -->
     <script defer src="./common/style/index.js"></script>
 
@@ -228,7 +231,7 @@
       />
       <img
         class="mainBackground main_star_playX"
-        src="./common/images/object/main-star(play-x).png"
+        src="./common/images/object/main-star_play-x.png"
         alt="main-star=plau-x"
       />
     </main>
