--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
       }
 
       .swiper {
-        width: 75%;
-        height: 100%;
+        width: 75vw;
+        height: 100vh;
 
         position: absolute;
         top: 2%;
@@ -93,8 +93,8 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
 
       .swiper-slide img {
         display: block;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 75vh;
         object-fit: cover;
       }
       .swiper-slide {
@@ -175,14 +175,14 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
         alt="mainBackground-lf"
       />
       <h4>안녕하세요!</h4>
-      <img
+      <!-- <img
         class="fontStar"
         src="./common/images/object/main-fontStar.png"
         alt="fontStar"
-      />
+      /> -->
       <div class="mainBackground mainTitle">
-        <h2 class="mgTop mgRt size_fall">생기</h2>
-        <p>를 불어넣는</p>
+        <h2 class="size_fall">생기</h2>
+        <p class="mgTop">를 불어넣는</p>
         <h2 class="mgTop mgRt title_ani">디자이너 이혜진</h2>
         <p>입니다.</p>
       </div>
@@ -223,16 +223,31 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
           src="./common/images/object/star5.png"
           alt="star"
         />
+        <img
+          class="star Star6"
+          src="./common/images/object/star3.png"
+          alt="star"
+        />
+        <img
+          class="star Star7"
+          src="./common/images/object/star5.png"
+          alt="star"
+        />
+        <img
+          class="star Star8"
+          src="./common/images/object/star5.png"
+          alt="star"
+        />
       </div>
+      <img
+        class="star Star9"
+        src="./common/images/object/star2(black-line).png"
+        alt="star"
+      />
       <img
         class="mainBackground main_fonts"
         src="./common/images/object/main-fonts.png"
         alt="main-art-font"
-      />
-      <img
-        class="mainBackground main_star_playX"
-        src="./common/images/object/main-star_play-x.png"
-        alt="main-star=plau-x"
       />
     </main>
 
@@ -556,48 +571,52 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
       </div>
     </article>
 
-    <article class="portfolio about page">
-      <div class="portfolioPersonals">
-        <div class="portfolioPersonal Basics">
-          <h2>기본 정보</h2>
-          <ul>
-            <li>1997.06.09</li>
-            <li>경기도 안성시 거주</li>
-            <li>건양대학교 시각디자인 전공</li>
-            <li>1717gpwls@naver.com</li>
-          </ul>
-        </div>
-        <div class="portfolioPersonal Career">
-          <h2>경력</h2>
-          <ul>
-            <li>2020.03 ~ 2021.12:뷰티브랜드 디자인팀 근무(총1년10개월)</li>
-            <li>2022.03 ~ 2022.07:뷰티브랜드 디자인팀 근무(총5개월)</li>
-          </ul>
-        </div>
-        <div class="portfolioPersonal Certificate">
-          <h2>자격증</h2>
-          <ul>
-            <li>2017.11.30: ACA포토샵(Adobe Certified Associate Photoshop)</li>
-            <li>
-              2019.11.14: ACA일러스트((Adobe Certified Associate Illustrator)
-            </li>
-            <li>2017.12.24: MOS파워포인트</li>
-            <li>2017.12.24: MOS엑셀</li>
-            <li>2022.08.29: 자동차운전면허증 2종보통</li>
-          </ul>
-        </div>
-        <div class="portfolioPersonal Activity">
-          <h2>대외활동</h2>
-          <ul>
-            <li>
-              2019.09 ~ 2019.09.11: 건양대학교 시각디자인학과 도록 디자인 팀장
-            </li>
-            <li>2019.09: 데마셀 패키지 디자인 참여</li>
-            <li>2019.02 ~ 2019.11: 건양대학교 시각디자인학과 졸업위원회</li>
-            <li>2021.10: 포코어커피 디자인 참여</li>
-            <li>2022.01 ~ 2022.02: 네오게임즈 홍보물 제작 참여</li>
-            <li>2022.09 ~ 2023.02: 웹퍼블리셔 UI/UX 프론트엔드 과정 수료</li>
-          </ul>
+    <article class="portfolio about">
+      <div class="page">
+        <div class="portfolioPersonals">
+          <div class="portfolioPersonal Basics">
+            <h2>기본 정보</h2>
+            <ul>
+              <li>1997.06.09</li>
+              <li>경기도 안성시 거주</li>
+              <li>건양대학교 시각디자인 전공</li>
+              <li>1717gpwls@naver.com</li>
+            </ul>
+          </div>
+          <div class="portfolioPersonal Career">
+            <h2>경력</h2>
+            <ul>
+              <li>2020.03 ~ 2021.12:뷰티브랜드 디자인팀 근무(총1년10개월)</li>
+              <li>2022.03 ~ 2022.07:뷰티브랜드 디자인팀 근무(총5개월)</li>
+            </ul>
+          </div>
+          <div class="portfolioPersonal Certificate">
+            <h2>자격증</h2>
+            <ul>
+              <li>
+                2017.11.30: ACA포토샵(Adobe Certified Associate Photoshop)
+              </li>
+              <li>
+                2019.11.14: ACA일러스트((Adobe Certified Associate Illustrator)
+              </li>
+              <li>2017.12.24: MOS파워포인트</li>
+              <li>2017.12.24: MOS엑셀</li>
+              <li>2022.08.29: 자동차운전면허증 2종보통</li>
+            </ul>
+          </div>
+          <div class="portfolioPersonal Activity">
+            <h2>대외활동</h2>
+            <ul>
+              <li>
+                2019.09 ~ 2019.09.11: 건양대학교 시각디자인학과 도록 디자인 팀장
+              </li>
+              <li>2019.09: 데마셀 패키지 디자인 참여</li>
+              <li>2019.02 ~ 2019.11: 건양대학교 시각디자인학과 졸업위원회</li>
+              <li>2021.10: 포코어커피 디자인 참여</li>
+              <li>2022.01 ~ 2022.02: 네오게임즈 홍보물 제작 참여</li>
+              <li>2022.09 ~ 2023.02: 웹퍼블리셔 UI/UX 프론트엔드 과정 수료</li>
+            </ul>
+          </div>
         </div>
       </div>
     </article>
@@ -619,26 +638,28 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
           src="./common/images/object/contactLogo.png"
           alt="contactLogo"
         />
-        <div class="contactBackgroundFlex contactBackground_MainTitle">
-          <h2>Contact</h2>
-          <ul class="contactBackgroundFlex contact_Menu">
-            <li><a class="contact_Main" href="#">Main</a></li>
-            <li><a class="contact_Work" href="#">Work</a></li>
-            <li><a class="contact_About" href="#">About</a></li>
-          </ul>
-        </div>
-        <div class="contactBackground_SubTitle">
-          <div class="contact_SubTitle Name">
-            <h3>Name</h3>
-            <p class="text_doc_Contact">LEEHYEJIN</p>
+        <div class="contactBox">
+          <div class="contactBackgroundFlex contactBackground_MainTitle">
+            <h2>Contact</h2>
+            <ul class="contactBackgroundFlex contact_Menu">
+              <li><a class="contact_Main" href="#">Main</a></li>
+              <li><a class="contact_Work" href="#">Work</a></li>
+              <li><a class="contact_About" href="#">About</a></li>
+            </ul>
           </div>
-          <div class="contact_SubTitle Email">
-            <h3>Email</h3>
-            <p class="text_doc_Contact">1717gpwls@naver.com</p>
-          </div>
-          <div class="contact_SubTitle Design">
-            <h3>Design</h3>
-            <p class="text_doc_Contact">UI/UX, PACKAGE, PUBLISHING</p>
+          <div class="contactBackground_SubTitle">
+            <div class="contact_SubTitle Name">
+              <h3>Name</h3>
+              <p class="text_doc_Contact">LEEHYEJIN</p>
+            </div>
+            <div class="contact_SubTitle Email">
+              <h3>Email</h3>
+              <p class="text_doc_Contact">1717gpwls@naver.com</p>
+            </div>
+            <div class="contact_SubTitle Design">
+              <h3>Design</h3>
+              <p class="text_doc_Contact">UI/UX, PACKAGE, PUBLISHING</p>
+            </div>
           </div>
         </div>
         <div class="scrollTo">
