--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
   <body>
     <header>
       <h1>
-        <a onClick="window.location.reload()" href="#Main"
+        <a onClick="window.location.reload()" href="./index.html"
           ><img
             class="header_Logo"
             src="./common/images/logo/header-logo-bk.png"
@@ -156,7 +156,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
         />
       </h1>
       <ul class="Menu">
-        <li class="menu_Main text_doc"><a href="#">Main</a></li>
+        <li class="menu_Main text_doc"><a href="./index.html">Main</a></li>
         <li class="menu_Work text_doc"><a href="#">Work</a></li>
         <li class="menu_About text_doc"><a href="#">About</a></li>
         <li class="menu_Contact text_doc"><a href="#">Contact</a></li>
@@ -304,6 +304,24 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                   </div>
                 </div>
                 <a href="#"
+                  ><img
+                    class="Project_Img"
+                    src="./project/project1/img_main_intro.jpg"
+                    alt="project1"
+                /></a>
+              </div>
+              <div class="swiper-slide">
+                <div class="slide_title">
+                  <p class="projectDate">2022-11</p>
+                  <p class="projectName_En">KNOTTERS WEB PUBLISHING</p>
+                  <p class="projectName_Kr">노터 웹퍼블리싱</p>
+                  <div class="projectItmBox">
+                    <p class="projectItm">#팀작업</p>
+                    <p class="projectItm">#UI/UX</p>
+                    <p class="projectItm">#JAVASCRIPT</p>
+                  </div>
+                </div>
+                <a href="./project/identity/identity.html"
                   ><img
                     class="Project_Img"
                     src="./project/project1/img_main_intro.jpg"
