--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <a href="/identity.html"
                   ><img
                     class="Project_Img"
-                    src="/project/identity/images/webMain.png"
+                    src="./project/identity/images/webMain.png"
                     alt="project1"
                 /></a>
               </div>
@@ -288,7 +288,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <a href="#"
                   ><img
                     class="Project_Img"
-                    src="/project/knotters/img_main_intro.jpg"
+                    src="./project/knotters/img_main_intro.jpg"
                     alt="project2"
                 /></a>
               </div>
@@ -306,7 +306,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <a href="#"
                   ><img
                     class="Project_Img"
-                    src="/project/knotters/img_main_intro.jpg"
+                    src="./project/knotters/img_main_intro.jpg"
                     alt="project1"
                 /></a>
               </div>
@@ -347,7 +347,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <a href="#"
                   ><img
                     class="Project_Img"
-                    src="/project/knotters/img_main_intro.jpg"
+                    src="./project/knotters/img_main_intro.jpg"
                     alt="project1"
                 /></a>
               </div>
@@ -365,7 +365,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <a href="#"
                   ><img
                     class="Project_Img"
-                    src="/project/knotters/img_main_intro.jpg"
+                    src="./project/knotters/img_main_intro.jpg"
                     alt="project1"
                 /></a>
               </div>
@@ -383,7 +383,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <a href="#"
                   ><img
                     class="Project_Img"
-                    src="/project/knotters/img_main_intro.jpg"
+                    src="./project/knotters/img_main_intro.jpg"
                     alt="project1"
                 /></a>
               </div>
@@ -421,7 +421,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <a href="#"
                   ><img
                     class="Project_Img"
-                    src="/project/knotters/img_main_intro.jpg"
+                    src="./project/knotters/img_main_intro.jpg"
                     alt="project1"
                 /></a>
               </div>
@@ -439,7 +439,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <a href="#"
                   ><img
                     class="Project_Img"
-                    src="/project/knotters/img_main_intro.jpg"
+                    src="./project/knotters/img_main_intro.jpg"
                     alt="project1"
                 /></a>
               </div>
@@ -457,7 +457,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                 <a href="#"
                   ><img
                     class="Project_Img"
-                    src="/project/knotters/img_main_intro.jpg"
+                    src="./project/knotters/img_main_intro.jpg"
                     alt="project1"
                 /></a>
               </div>
