--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.min.js
                     <p class="projectItm">#JAVASCRIPT</p>
                   </div>
                 </div>
-                <a href="/identity.html"
+                <a href="./index.html"
                   ><img
                     class="Project_Img"
                     src="./project/identity/images/webMain.png"
