--- a/identity.html
+++ b/identity.html
@@ -7,7 +7,7 @@
     <title>웹포트폴리오</title>
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="/common/images/logo/favicon.png" />
+    <link rel="shortcut icon" href="./common/images/logo/favicon.png" />
 
     <!-- scroll To 아이콘 -->
     <link
@@ -16,11 +16,11 @@
     />
 
     <!-- reset -->
-    <link rel="stylesheet" href="/common/minireset.min.css" />
+    <link rel="stylesheet" href="./common/minireset.min.css" />
     <!-- font-->
-    <link rel="stylesheet" href="/common/fonts/font.css" />
+    <link rel="stylesheet" href="./common/fonts/font.css" />
     <!-- style.css -->
-    <link rel="stylesheet" href="./style/identity.css" />
+    <link rel="stylesheet" href="./project/identity/style/identity.css" />
 
     <!-- jQuery-->
     <script src="
@@ -29,7 +29,7 @@
 
     <!-- <script src="https://code.jquery.com/jquery-migrate-3.4.0.min.js"></script> -->
     <!-- js -->
-    <script defer src="./style/identity.js"></script>
+    <script defer src="./project/identity/style/identity.js"></script>
   </head>
   <body>
     <header>
@@ -37,14 +37,14 @@
         <a onClick="window.location.reload()" href="/index.html"
           ><img
             class="header_Logo"
-            src="/common/images/logo/header-logo-bk.png"
+            src="./common/images/logo/header-logo-bk.png"
             alt="main_Logo"
         /></a>
       </h1>
       <h1>
         <img
           class="header_Logo2"
-          src="/common/images/logo/header-logo.png"
+          src="./common/images/logo/header-logo.png"
           alt="logo2"
         />
       </h1>
@@ -114,7 +114,7 @@
               <figure class="figure_logobk">
                 <img
                   class="logo_bk"
-                  src="/common/images/logo/header-logo-bk.png"
+                  src="./common/images/logo/header-logo-bk.png"
                   alt="bk_logo"
                 />
                 <figcaption>Logo</figcaption>
@@ -122,7 +122,7 @@
               <figure class="figure_symbol">
                 <img
                   class="symbol"
-                  src="/common/images/logo/header-logo.png"
+                  src="./common/images/logo/header-logo.png"
                   alt="logo"
                 />
                 <figcaption>Symbol</figcaption>
@@ -248,7 +248,7 @@
             </a>
         </div>
         <div class="wishList_next">
-            <a href="/index.html">
+            <a href="./index.html">
               <div class="next_title">
                 <h3>Next</h3>
                 <h2>Knotters</h2>
