--- a/peachc.html
+++ b/peachc.html
@@ -69,10 +69,11 @@
       }
 
       .swiper-slide img {
-        display: block;
+        /* position: absolute; */
+        /* display: block;
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: cover; */
       }
       pagination-bullet,
       .swiper-pagination-horizontal.swiper-pagination-bullets
@@ -88,7 +89,7 @@
         /* top: var(--swiper-pagination-top, auto); */
         width: 100%;
         position: absolute;
-        bottom: 4%;
+        bottom: 2.5%;
         /* right: 10%; */
         text-indent: 70%;
       }
@@ -122,6 +123,14 @@
           <li class="menu_Work text_doc"><a href="#">SHOP</a></li>
           <li class="menu_About text_doc"><a href="#">REVIEW</a></li>
         </ul>
+        <h1 class="headerLogo_2">
+          <a onClick="window.location.reload()" href="/peachc.html"
+            ><img
+              class="header_Logo headerLogo_2"
+              src="./project/peachc/common/images/logo/main-logo.png"
+              alt="main_Logo"
+          /></a>
+        </h1>
         <ul class="iconBox">
           <li>
             <a href="#"
@@ -162,27 +171,282 @@
       <!-- Swiper -->
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img
+          <div class="swiper-slide main-1">
+            <!-- <img
               src="./project/peachc/common/images/main-bg_01.png"
               alt="main"
-            />
+            /> -->
             <div class="mainTitle">
               <h3>#PEACH C에서 가장 사랑받는♥</h3>
               <p>#립&아이 메이크업</p>
             </div>
           </div>
           <div class="swiper-slide">
-            <img
+            <!-- <img
               src="./project/peachc/common/images/main-bg_01.png"
               alt="main"
-            />
+            /> -->
           </div>
         </div>
         <div class="swiper-pagination"></div>
       </div>
     </main>
+    <section>
+      <div class="banner_mdPICK">
+        <h2 class="mdPICKTitle mdPICKTitle_rt">MD’S pick</h2>
+        <h2 class="mdPICKTitle mdPICKTitle_lf">IVE REI</h2>
+        <div class="imageBox">
+          <img
+            class="PALETTE07"
+            src="./project/peachc/common/images/modal/PALETTE_lay_07.png"
+            alt="PALETTE_lay"
+          />
+          <img
+            class="mauvewave"
+            src="./project/peachc/common/images/REPLAYPINK.png"
+            alt="REPLAYPINK"
+          />
+        </div>
+        <div class="productTitle">
+          <h3>
+            시즈널 블렌딩 아이섀도우 팔레트<br />
+            #RE_PLAY PINK
+          </h3>
+          <p>
+            나만의 플레이리스트처럼 하루를 생기 있게 만들어주는<br />
+            쿨 브라이트 팔레트
+          </p>
+        </div>
+        <div class="productImg_Box">
+          <div class="productImg item_mauvewave">
+            <img
+              src="./project/peachc/common/images/products/mauvewave.png"
+              alt="mauvewave"
+            />
+          </div>
+          <div class="productImg item_sunsetgrass">
+            <img
+              src="./project/peachc/common/images/products/sunsetgrass.png"
+              alt="sunsetgrass"
+            />
+          </div>
+          <div class="productImg item_replaypink">
+            <img
+              src="./project/peachc/common/images/products/replaypink.png"
+              alt="replaypink"
+            />
+          </div>
+        </div>
+        <div class="viewBtn banner_md_Btn">
+          <p>MORE VIEW</p>
+          <div class="arrowbtn">
+            <img
+              class="arrow"
+              src="./project/peachc/common/images/arrow.svg"
+              alt="arrow"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="slideAni">
+        <div class="flow-container">
+          <div class="PortfolioBox">
+            <p class="PortfolioText">
+              &nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC&nbsp;PEACHC
+            </p>
+          </div>
+        </div>
+      </div>
 
+      <div class="product">
+        <div class="title">
+          <h3>
+            PEACH C,<br />
+            <span>Best Products</span>
+          </h3>
+        </div>
+        <div class="products_Box">
+          <div class="product_inner product_1">
+            <img
+              class="modal"
+              src="./project/peachc/common/images/modal/artboard_palette.png"
+              alt="PALETTE_lay_05"
+            />
+            <img
+              class="itemImg product_PALETTE"
+              src="./project/peachc/common/images/products/a16aa28d8bcd0fef877c8c8091c11a1d.png"
+              alt="PALETTE"
+            />
+            <div class="innerTitle product_1_innerTitle">
+              <h3>
+                PEACH C SEASONAL BLENDING<br />
+                EYE SHADOW PALETTE
+              </h3>
+              <p>#소프트터치 #이지레이어링 #뮤트음영</p>
+              <div class="Circle PALETTE_Circle">
+                <span class="PALETTE PALETTE_1"></span>
+                <span class="PALETTE PALETTE_2"></span>
+                <span class="PALETTE PALETTE_3"></span>
+              </div>
+            </div>
+            <div class="viewBtn product_PALETTE_Btn">
+              <p>MORE VIEW</p>
+              <div class="arrowbtn">
+                <img
+                  class="arrow"
+                  src="./project/peachc/common/images/arrow.svg"
+                  alt="arrow"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div class="product_inner product_2">
+            <div class="innerTitle product_2_innerTitle">
+              <h3>
+                PEACH C SLIM WATERPROOF<br />
+                FIXXYLINER
+              </h3>
+              <p>#초강력워터프루프 #2mm초슬림펜슬 #크리미텍스쳐</p>
+              <div class="Circle liner_Circle">
+                <span class="liner liner_1"></span>
+                <span class="liner liner_2"></span>
+                <span class="liner liner_3"></span>
+              </div>
+            </div>
+            <img
+              class="itemImg product_liner"
+              src="./project/peachc/common/images/products/slimwaterprooffixxyliner.png"
+              alt="PALETTE"
+            />
+            <img
+              class="modal product_2_modal"
+              src="./project/peachc/common/images/modal/artboard_slimwaterprooffixxyliner.png"
+              alt="slimwaterprooffixxyliner"
+            />
+
+            <div class="viewBtn product_liner_Btn">
+              <p>MORE VIEW</p>
+              <div class="arrowbtn">
+                <img
+                  class="arrow"
+                  src="./project/peachc/common/images/arrow.svg"
+                  alt="arrow"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div class="product_inner product_3">
+            <img
+              class="modal"
+              src="./project/peachc/common/images/modal/artboard_UNDEREYE.png"
+              alt="UNDEREYE"
+            />
+            <img
+              class="itemImg product_UNDEREYE"
+              src="./project/peachc/common/images/products/UNDEREYE.png"
+              alt="PALETTE"
+            />
+            <div class="innerTitle product_3_innerTitle">
+              <h3>
+                PEACH C UNDER EYE<br />
+                CHEAT KEY LINER
+              </h3>
+              <p>#멜팅크리미텍스쳐 #롱래스팅 #원터치아이템</p>
+              <div class="Circle UNDER_Circle">
+                <span class="UNDERUNDER EYE_1"></span>
+                <span class="UNDERUNDER EYE_2"></span>
+                <span class="UNDERUNDER EYE_3"></span>
+              </div>
+            </div>
+            <div class="viewBtn product_UNDEREYE_Btn">
+              <p>MORE VIEW</p>
+              <div class="arrowbtn">
+                <img
+                  class="arrow"
+                  src="./project/peachc/common/images/arrow.svg"
+                  alt="arrow"
+                />
+              </div>
+            </div>
+          </div>
+
+          <div class="product_inner product_4">
+            <div class="innerTitle product_4_innerTitle">
+              <h3>
+                PEACH C TUNING<br />
+                BRUSH SET
+              </h3>
+              <p>#베이직사이즈 #고급인조모 #메이크업필수템</p>
+              <div class="Circle BRUSH_Circle">
+                <span class="BRUSH BRUSH_1"></span>
+                <span class="BRUSH BRUSH_2"></span>
+                <span class="BRUSH BRUSH_3"></span>
+              </div>
+            </div>
+            <img
+              class="itemImg product_BRUSH"
+              src="./project/peachc/common/images/products/tunningbrushset_01.png"
+              alt="PALETTE"
+            />
+            <img
+              class="modal product_4_modal"
+              src="./project/peachc/common/images/modal/artboard_BRUSH.png"
+              alt="slimwaterprooffixxyliner"
+            />
+
+            <div class="viewBtn product_BRUSH_Btn">
+              <p>MORE VIEW</p>
+              <div class="arrowbtn">
+                <img
+                  class="arrow"
+                  src="./project/peachc/common/images/arrow.svg"
+                  alt="arrow"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="about_banner">
+        <div class="aboutTitle top">
+          <h2 class="big">PEACH C,</h2>
+          <h2 class="font">Find Your</h2>
+        </div>
+        <div class="aboutTitle bottom">
+          <h2 class="mg font">Love</h2>
+          <h2 class="font">liness!</h2>
+        </div>
+        <div class="mention">
+          <p>
+            당신이 갖고 있는 사랑스러움,<br />
+            나를 정의하는 <span>#Hashtag</span> 피치씨가 함께 찾아줄게요.<br />
+            그리고 당신을 그런 사람이 될 수 있도록 도와줄게요.
+          </p>
+        </div>
+        <div class="about_Product">
+          <img src="" alt="" />
+          <img src="" alt="" />
+          <img src="" alt="" />
+        </div>
+        <img
+          class="slide_modal"
+          src="./project/peachc/common/images/modal/PALETTE_lay_04.jpg"
+          alt="PALETTE_lay_04"
+        />
+        <div class="viewBtn about_Btn">
+          <p>MORE VIEW</p>
+          <div class="arrowbtn">
+            <img
+              class="arrow"
+              src="./project/peachc/common/images/arrow.svg"
+              alt="arrow"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 
